Criação da classe Cobrança, impantando os métodos
