# public/swagger/dist/swagger.json
@@ -3,6 +3,11 @@
     "info": {
         "title": "API do Asaas",
         "description": "API para interação com o Asaas para gestão de pagamentos",
+        "contact": {
+            "name": "Gabriel Gomes",
+            "url": "https://gabriellgomess.com",
+            "email": "gabriel.gomes@outlook.com"
+        },
         "version": "1.0.0"
     },
     "servers": [
@@ -224,6 +229,130 @@
                     }
                 }
             }
+        },
+        "/asaas/cobrancas": {
+            "get": {
+                "tags": [
+                    "Cobrancas"
+                ],
+                "summary": "Listar Cobranças",
+                "description": "Listar Cobranças do Asaas",
+                "operationId": "listarCobrancas",
+                "parameters": [
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "Access Token"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Cobrancas"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Cobrancas"
+                ],
+                "summary": "Criar Cobrança",
+                "description": "Criar uma nova cobrança no Asaas",
+                "operationId": "criarCobranca",
+                "parameters": [
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "Access Token"
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CreateBilling"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Cobrança criada com sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Cobranca"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Erro na criação da cobrança"
+                    }
+                }
+            }
+        },
+        "/asaas/cobrancas/{cobrancaId}": {
+            "get": {
+                "tags": [
+                    "Cobrancas"
+                ],
+                "summary": "Buscar Cobrança por ID",
+                "operationId": "buscarCobrancaPorId",
+                "parameters": [
+                    {
+                        "name": "cobrancaId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "ID da Cobrança"
+                    },
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "Access Token"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Cobranca"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Cobrança não encontrada"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -398,7 +527,7 @@
                     }
                 }
             },
-            "DeleteClient":{
+            "DeleteClient": {
                 "type": "object",
                 "properties": {
                     "deleted": {
@@ -406,15 +535,142 @@
                         "description": "Se o cliente foi deletado"
                     }
                 }
-            
+            },
+            "CreateBilling": {
+                "type": "object",
+                "properties": {
+                    "customer": {
+                        "type": "string",
+                        "description": "ID do cliente"
+                    },
+                    "billingType": {
+                        "type": "string",
+                        "description": "Tipo de cobrança"
+                    },
+                    "value": {
+                        "type": "number",
+                        "description": "Valor da cobrança"
+                    },
+                    "dueDate": {
+                        "type": "string",
+                        "description": "Data de vencimento da cobrança"
+                    },
+                    "description": {
+                        "type": "string",
+                        "description": "Descrição da cobrança"
+                    },
+                    "externalReference": {
+                        "type": "string",
+                        "description": "Referência externa da cobrança"
+                    },
+                    "installmentCount": {
+                        "type": "integer",
+                        "description": "Número de parcelas da cobrança"
+                    },
+                    "totalValue": {
+                        "type": "number",
+                        "description": "Valor total da cobrança"
+                    },
+                    "installmentValue": {
+                        "type": "number",
+                        "description": "Valor da parcela da cobrança"
+                    },
+                    "discount": {
+                        "type": "object",
+                        "description": "Desconto da cobrança",
+                        "properties": {
+                            "value": {
+                                "type": "number",
+                                "description": "Valor do desconto"
+                            },
+                            "dueDateLimitDays": {
+                                "type": "integer",
+                                "description": "Número de dias para o desconto"
+                            }
+                        }
+                    },
+                    "interest": {
+                        "type": "object",
+                        "description": "Juros da cobrança",
+                        "properties": {
+                            "value": {
+                                "type": "number",
+                                "description": "Valor do juros"
+                            },
+                            "type": {
+                                "type": "string",
+                                "description": "Tipo de juros"
+                            }
+                        }
+                    },
+                    "fine": {
+                        "type": "object",
+                        "description": "Multa da cobrança",
+                        "properties": {
+                            "value": {
+                                "type": "number",
+                                "description": "Valor da multa"
+                            },
+                            "type": {
+                                "type": "string",
+                                "description": "Tipo de multa"
+                            }
+                        }
+                    },
+                    "postalService": {
+                        "type": "boolean",
+                        "description": "Se a cobrança é por serviço postal"
+                    },
+                    "split": {
+                        "type": "object",
+                        "description": "Split de Pagamento",
+                        "properties": {
+                            "walletId": {
+                                "type": "string",
+                                "description": "ID da carteira"
+                            },
+                            "fixedValue": {
+                                "type": "string",
+                                "description": "Valor fixo a ser transferido para a conta quando a cobrança for recebida"
+                            },
+                            "percentualValue": {
+                                "type": "string",
+                                "description": "Valor percentual a ser transferido para a conta quando a cobrança for recebida"
+                            },
+                            "totalFixedValue": {
+                                "type": "string",
+                                "description": "(Somente parcelamentos). Valor que será feito split referente ao valor total que será parcelado."
+                            }
+                        }
+                    },
+                    "callback": {
+                        "type": "object",
+                        "description": "Callback da cobrança",
+                        "properties": {
+                            "successUrl": {
+                                "type": "string",
+                                "description": "URL que o cliente será redirecionado após o pagamento com sucesso da fatura ou link de pagamento"
+                            },
+                            "autoRedirect": {
+                                "type": "boolean",
+                                "description": "Definir se o cliente será redirecionado automaticamente ou será apenas informado com um botão para retornar ao site. O padrão é true, caso queira desativar informar false"
+                            }
+                        }
+                    }
+                },
+                "required": [
+                    "customer",
+                    "value",
+                    "dueDate"
+                ]
             }
-        },
-        "securitySchemes": {
-            "ApiKeyAuth": {
-                "type": "apiKey",
-                "in": "header",
-                "name": "access_token"
-            }
+        }
+    },
+    "securitySchemes": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "in": "header",
+            "name": "access_token"
         }
     }
 }
